<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cffffff">

    <include layout="@layout/include_title" />

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/cCCCCCC" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/cffffff"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone"
                android:textColor="@color/c333333"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:layout_toRightOf="@id/tv_phone"
                android:background="@color/cffffff"
                android:hint="@string/input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/c333333"
                android:textColorHint="@color/cCCCCCC"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/clearPhone"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/clear_text_icon" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/cCCCCCC" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/cffffff"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone_code"
                android:textColor="@color/c333333"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/PhoneCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:layout_toRightOf="@id/tv_code"
                android:background="@color/cffffff"
                android:hint="@string/input_code"
                android:inputType="number"
                android:textColor="@color/c333333"
                android:textColorHint="@color/cCCCCCC"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/getPhoneCode"
                android:layout_width="84dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/border_f14b4b_round"
                android:gravity="center"
                android:text="@string/get_code"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cCCCCCC" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/cffffff"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/tv_passwd"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/passwd_set"
                android:textColor="@color/c333333"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editPasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:layout_toRightOf="@id/tv_passwd"
                android:background="@color/cffffff"
                android:hint="@string/passwd_tip"
                android:inputType="textPassword"
                android:textColor="@color/c333333"
                android:textColorHint="@color/cCCCCCC"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/visibleLay"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/visibleIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/visiable_passwd_icon" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/cCCCCCC" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/lay1"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="30dp"
        android:alpha="0.3"
        android:background="@drawable/fill_d43c33_round"
        android:gravity="center"
        android:text="@string/finish_register"
        android:textColor="@color/cffffff"
        android:textSize="19sp" />
</RelativeLayout>