<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cffffff"
    android:fitsSystemWindows="true">

    <include layout="@layout/include_title" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/toolbar"
        android:alpha="0.1"
        android:background="@color/c222222" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line"
        android:background="@color/cffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/selectLay"
        android:background="@color/c4D000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/selectLay"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@color/cffffff"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/select_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_all"
            android:textColor="@color/c222222"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/cFF6600"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/noDataView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/no_cache_icon" />

        <TextView
            android:id="@+id/cache_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/no_cache"
            android:textColor="@color/c444444"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cache_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:text="@string/no_cache_tip"
            android:textColor="@color/c9b9b9b"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>